# c-chess

./: CMakeLists.txt  README.md  SPArrayList.c  SPArrayList.h  SPCHESSGame.c  SPCHESSGame.h  SPCHESSParser.c  SPCHESSParser.h  SPConsoleMain.c  SPConsoleMain.h  SPGUIGameScreen.c  SPGUIGameScreen.h  SPGUIMainAux.c  SPGUIMainAux.h  SPGUISaveLoadScreen.c  SPGUISaveLoadScreen.h  SPGUISettingsScreen.c  SPGUISettingsScreen.h  SPGUIStartScreen.c  SPGUIStartScreen.h  SPGUITypes.c  SPGUITypes.h  SPMainAux.c  SPMainAux.h  SPMiniMax.c  SPMiniMax.h  main.c
